src/components/sbb-header-action/sbb-header-action.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

// Displays the action item's text and corrects spacings.
$breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';

:host {
  --sbb-header-action-text-display: none;
  --sbb-header-action-padding-inline: 0;
  --sbb-header-action-background-color: transparent;
  --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
  --sbb-header-action-min-width: var(--sbb-header-action-min-height);
  --sbb-header-action-animation-duration: var(--sbb-animation-duration-2x);
  --sbb-header-action-inset: 0;
  --sbb-header-action-translate-y: 0;

  // The variable is assigned to the property in the sbb-header component if it is
  // the first element in the header and needs left offset correction (see sbb-header.scss).
  // To avoid duplicated css definitions, the value itself is assigned here in
  // sbb-header-action instead of sbb-header.
  //
  // Move it left by distance between button's left side and the start of the icon.
  // As result, the icon should be aligned with the left side of the page wrapper.
  --sbb-header-first-item-margin-inline-start: calc(
    -0.5 * (var(--sbb-header-action-min-width) - var(--sbb-size-icon-ui-small))
  );

  display: inline-block;
}

@each $breakpoint in $breakpoints {
  :host([expand-from='#{$breakpoint}']) {
    @include sbb.mq($from: $breakpoint) {
      --sbb-header-action-text-display: block;
      --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);

      // If expanded, move it left by left padding.
      // As result, the icon should be aligned with the left side of the page wrapper.
      --sbb-header-first-item-margin-inline-start: calc(
        -1 * var(--sbb-header-action-padding-inline)
      );
    }
  }
}

@include sbb.hover-mq($hover: true) {
  :host(:hover:not(:active, [data-menu-open])) {
    --sbb-header-action-background-color: var(--sbb-color-milk-default);
    --sbb-header-action-translate-y: #{sbb.px-to-rem-build(-1)};
    --sbb-header-action-inset: calc(var(--sbb-border-width-2x) * -1);
  }
}

:host(:active) {
  --sbb-header-action-background-color: var(--sbb-color-cloud-default);
}

.sbb-header-action {
  @include sbb.button-reset;
  @include sbb.text-inherit;

  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  color: var(--sbb-color-black-default);
  text-decoration: none;
  min-height: var(--sbb-header-action-min-height);
  min-width: var(--sbb-header-action-min-width);
  padding-inline: var(--sbb-header-action-padding-inline);
  cursor: pointer;

  &:focus-visible {
    @include sbb.focus-outline;
  }

  &::before {
    position: absolute;
    content: '';
    inset: var(--sbb-header-action-inset);
    border-radius: var(--sbb-border-radius-16x);
    background-color: var(--sbb-header-action-background-color);
    transition-duration: var(--sbb-header-action-animation-duration);
    transition-timing-function: var(--sbb-animation-easing);
    transition-property: inset, background-color;
  }
}

.sbb-header-action__wrapper {
  display: flex;
  align-items: center;
  gap: var(--sbb-spacing-fixed-2x);
  white-space: nowrap;
  transform: translateY(var(--sbb-header-action-translate-y));
  transition: transform var(--sbb-header-action-animation-duration) var(--sbb-animation-easing);
  will-change: transform;
}

.sbb-header-action__icon {
  // Set stroke on header icons
  --sbb-icon-svg-stroke-color: currentcolor;
  --sbb-icon-svg-stroke-width: 0.5px;

  min-width: var(--sbb-size-icon-ui-small);
  min-height: var(--sbb-size-icon-ui-small);
  line-height: 0;
}

.sbb-header-action__text {
  @include sbb.text-xs--bold;

  display: var(--sbb-header-action-text-display);
}

.sbb-header-action__opens-in-new-window {
  @include sbb.screen-reader-only;
}

